--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,100 @@
         </ul>
       </div>
     </header>
-    <div class="content content_title"></div>
+    <div class="content content_title">
+      <svg class="content_title__svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <defs>
+          <filter filterUnits="userSpaceOnUse" id="Filter_0" x="0px" y="0px">
+            <feOffset in="SourceAlpha" dx="0" dy="3"></feOffset>
+            <feGaussianBlur result="blurOut" stdDeviation="10"></feGaussianBlur>
+            <feFlood flood-color="rgb(53, 41, 148)" result="floodOut"></feFlood>
+            <feComposite operator="atop" in="floodOut" in2="blurOut"></feComposite>
+            <feComponentTransfer>
+              <feFuncA type="linear" slope="0.1"></feFuncA>
+            </feComponentTransfer>
+            <feMerge>
+              <feMergeNode></feMergeNode>
+              <feMergeNode in="SourceGraphic"></feMergeNode>
+            </feMerge>
+          </filter>
+          <linearGradient id="PSgrad_0" x1="0%" x2="0%" y1="100%" y2="0%">
+            <stop offset="0%" stop-color="rgb(76,28,188)" stop-opacity="1"></stop>
+            <stop offset="100%" stop-color="rgb(51,42,145)" stop-opacity="1"></stop>
+          </linearGradient>
+        </defs>
+        <g filter="url(#Filter_0)">
+          <path fill-rule="evenodd" d="M1952.000,0.000 L32.000,0.000 C32.000,0.000 32.455,36.594 32.455,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z"></path>
+        </g>
+        <path fill="url(#PSgrad_0)" d="M1952.000,0.000 L0.000,0.000 C0.000,0.000 0.000,0.000 0.000,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z"></path>
+      </svg>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-6 offset-xl-1 align-items-center">
+            <h1 class="heading">Разработка. Реклама. Продвижение. Маркетинг продаж.</h1><a class="btn btn_primary" href="#">обсудим проект?</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content content_section">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-6">
+            <h2 class="heading">От разработки <span class="heading-color">до первых клиентов </span>всего 10 дней</h2>
+            <p class="offer">Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. </p>
+            <div class="content__btn"><a class="content__btn__link" href="#">Веб-дизайн</a><a class="content__btn__link" href="#">SEO продвижение</a><a class="content__btn__link" href="#">Контекстная реклама</a><a class="content__btn__link" href="#">Разработка сайта</a><a class="content__btn__link" href="#">Маркетинг продаж</a><a class="content__btn__link" href="#">Создание контента</a></div>
+          </div>
+          <div class="col-xl-5 offset-xl-3">
+            <p class="offer">Сроки для нас — не пустой звук. Мы четко выстраиваем работу, чтобы ваш бизнес начал приносить прибыль как можно скорее. Вы всегда будете в курсе процесса и сможете понимать на каком этапе реализация проекта.</p>
+          </div>
+          <div class="col-xl-6 offset-xl-3">
+            <h3 class="heading">У вас будут <span class="heading-color">преимущества</span></h3>
+            <div class="toggle-tabs">
+              <div class="toggle-tabs__item">
+                <div class="toggle-tabs__item__title">Бизнес на любом устройстве </div>
+                <div class="toggle-tabs__item__content">Создаём сайт, который прекрасно выглядит и функционирует на любом размере экрана: мобильный телефон, планшет и компьютер.</div>
+              </div>
+              <div class="toggle-tabs__item">
+                <div class="toggle-tabs__item__title">Digital маркетинг</div>
+                <div class="toggle-tabs__item__content">Позволяет управлять вниманием и поведением пользователей</div>
+              </div>
+              <div class="toggle-tabs__item">
+                <div class="toggle-tabs__item__title">Концепция</div>
+                <div class="toggle-tabs__item__content">Продуманная и выдержанная направленность, соответствующая тематике сайта</div>
+              </div>
+              <div class="toggle-tabs__item">
+                <div class="toggle-tabs__item__title">Воронка продаж</div>
+                <div class="toggle-tabs__item__content">Сайт будет содержать все необходимые блоки для совершения продаж</div>
+              </div>
+              <div class="toggle-tabs__item">
+                <div class="toggle-tabs__item__title">Гармоничный контент</div>
+                <div class="toggle-tabs__item__content">Только качественный и релевантный контент может обеспечить большие продажи и первые места в поисковых системах</div>
+              </div>
+              <div class="toggle-tabs__item">
+                <div class="toggle-tabs__item__title">Работающий дизайн</div>
+                <div class="toggle-tabs__item__content">---------------------------</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content content_portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-5">
+            <h4 class="heading">Реализованные <a href="#">проекты</a></h4>
+          </div>
+          <div class="col-xl-3 offset-xl-2"><a class="content_portfolio__link" href="#">все проекты здесь >  </a></div>
+        </div>
+        <div class="portfolio">
+          <div class="row"> 
+            <div class="col-md-3"><a class="portfolio__title" href="#">#Логотип</a><a href="#"><img class="portfolio__image" src="./images/01.png"/></a></div>
+            <div class="col-md-3"><a class="portfolio__title" href="#">#Веб-разработка</a><a href="#"><img class="portfolio__image" src="./images/02.png"/></a></div>
+            <div class="col-md-3"><a class="portfolio__title" href="#">#Реклама</a><a href="#"><img class="portfolio__image" src="./images/03.png"/></a></div>
+            <div class="col-md-3"><a class="portfolio__title" href="#">#Реклама</a><a href="#"><img class="portfolio__image" src="./images/03.png"/></a></div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
