--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.nicescroll.min.js"></script>
+    <script src="./js/app.min.js"></script>
     <header class="header">
       <div class="container">
         <div class="row">
@@ -31,17 +33,15 @@
             </svg>
           </div>
           <div class="col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col-xl-7 text-right">
-            <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-              <g>
-                <path class="header__nav__path" d="M6.979,271.181c30.288,25.979,64.616,55.426,131.017,55.426c66.403-0.001,100.733-29.447,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159c7.191-8.385,6.225-21.011-2.16-28.202c-30.289-25.979-64.619-55.426-131.022-55.426S273.265,214.84,242.976,240.82c-28.644,24.568-53.382,45.787-104.98,45.787c-51.597,0-76.332-21.218-104.974-45.787c-8.384-7.191-21.01-6.226-28.202,2.159C-2.372,251.363-1.405,263.99,6.979,271.181z"></path>
-                <path class="header__nav__path" d="M6.979,161.787c30.287,25.98,64.615,55.426,131.017,55.426c66.403,0,100.733-29.446,131.022-55.426C297.662,137.219,322.399,116,373.998,116c51.597,0,76.335,21.218,104.98,45.787c8.385,7.193,21.01,6.224,28.201-2.161c7.192-8.384,6.223-21.012-2.161-28.202C474.729,105.444,440.399,76,373.998,76c-66.403,0-100.733,29.446-131.022,55.426c-28.644,24.568-53.382,45.787-104.98,45.787c-51.596,0-76.332-21.218-104.974-45.787c-8.384-7.192-21.011-6.226-28.202,2.159C-2.372,141.969-1.405,154.596,6.979,161.787z"></path>
-                <path class="header__nav__path" d="M505.02,350.213c-30.289-25.979-64.619-55.426-131.022-55.426s-100.733,29.446-131.022,55.426C214.332,374.781,189.594,396,137.996,396c-51.594,0-76.331-21.218-104.973-45.785l-0.002-0.002c-8.384-7.189-21.009-6.223-28.201,2.16c-7.191,8.384-6.224,21.011,2.16,28.202C37.268,406.555,71.597,436,137.996,436c66.403,0,100.733-29.446,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159C514.371,370.03,513.405,357.404,505.02,350.213z"></path>
-              </g>
-            </svg>
-          </div>
         </div>
       </div>
+      <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+        <g>
+          <path class="header__nav__path" d="M6.979,271.181c30.288,25.979,64.616,55.426,131.017,55.426c66.403-0.001,100.733-29.447,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159c7.191-8.385,6.225-21.011-2.16-28.202c-30.289-25.979-64.619-55.426-131.022-55.426S273.265,214.84,242.976,240.82c-28.644,24.568-53.382,45.787-104.98,45.787c-51.597,0-76.332-21.218-104.974-45.787c-8.384-7.191-21.01-6.226-28.202,2.159C-2.372,251.363-1.405,263.99,6.979,271.181z"></path>
+          <path class="header__nav__path" d="M6.979,161.787c30.287,25.98,64.615,55.426,131.017,55.426c66.403,0,100.733-29.446,131.022-55.426C297.662,137.219,322.399,116,373.998,116c51.597,0,76.335,21.218,104.98,45.787c8.385,7.193,21.01,6.224,28.201-2.161c7.192-8.384,6.223-21.012-2.161-28.202C474.729,105.444,440.399,76,373.998,76c-66.403,0-100.733,29.446-131.022,55.426c-28.644,24.568-53.382,45.787-104.98,45.787c-51.596,0-76.332-21.218-104.974-45.787c-8.384-7.192-21.011-6.226-28.202,2.159C-2.372,141.969-1.405,154.596,6.979,161.787z"></path>
+          <path class="header__nav__path" d="M505.02,350.213c-30.289-25.979-64.619-55.426-131.022-55.426s-100.733,29.446-131.022,55.426C214.332,374.781,189.594,396,137.996,396c-51.594,0-76.331-21.218-104.973-45.785l-0.002-0.002c-8.384-7.189-21.009-6.223-28.201,2.16c-7.191,8.384-6.224,21.011,2.16,28.202C37.268,406.555,71.597,436,137.996,436c66.403,0,100.733-29.446,131.022-55.426c28.644-24.568,53.382-45.787,104.98-45.787c51.599,0,76.337,21.219,104.98,45.787c8.385,7.191,21.011,6.225,28.202-2.159C514.371,370.03,513.405,357.404,505.02,350.213z"></path>
+        </g>
+      </svg>
       <div class="nav">
         <ul class="header__navbar">
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Верстка и разработка</a></li>
@@ -54,15 +54,13 @@
       </div>
     </header>
     <div class="content content_title">
-      <svg class="content_title__svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <svg class="content_title__svg" viewBox="0 0 1920 520" preserveAspectRatio="xMidYMax slice">
         <defs>
-          <filter filterUnits="userSpaceOnUse" id="Filter_0" x="0px" y="0px">
-            <feOffset in="SourceAlpha" dx="0" dy="3"></feOffset>
-            <feGaussianBlur result="blurOut" stdDeviation="10"></feGaussianBlur>
-            <feFlood flood-color="rgb(53, 41, 148)" result="floodOut"></feFlood>
-            <feComposite operator="atop" in="floodOut" in2="blurOut"></feComposite>
+          <filter id="shadow_03" filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%">
+            <feGaussianBlur in="SourceAlpha" result="blur" stdDeviation="5"></feGaussianBlur>
+            <feOffset dx="2" dy="6" in="blur" result="offsetBlurredAlpha"></feOffset>
             <feComponentTransfer>
-              <feFuncA type="linear" slope="0.1"></feFuncA>
+              <feFuncA type="linear" slope="0.2"></feFuncA>
             </feComponentTransfer>
             <feMerge>
               <feMergeNode></feMergeNode>
@@ -70,15 +68,36 @@
             </feMerge>
           </filter>
           <linearGradient id="PSgrad_0" x1="0%" x2="0%" y1="100%" y2="0%">
-            <stop offset="0%" stop-color="rgb(76,28,188)" stop-opacity="1"></stop>
-            <stop offset="100%" stop-color="rgb(51,42,145)" stop-opacity="1"></stop>
+            <stop offset="0%" stop-color="#2b238b" stop-opacity="1"></stop>
+            <stop offset="100%" stop-color="#2b16bc" stop-opacity="1"></stop>
           </linearGradient>
         </defs>
-        <g filter="url(#Filter_0)">
-          <path fill-rule="evenodd" d="M1952.000,0.000 L32.000,0.000 C32.000,0.000 32.455,36.594 32.455,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z"></path>
-        </g>
-        <path fill="url(#PSgrad_0)" d="M1952.000,0.000 L0.000,0.000 C0.000,0.000 0.000,0.000 0.000,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z"></path>
+        <path fill="url(#PSgrad_0)" filter="url(#shadow_03)" d="M1952.000,0.000 L0.000,0.000 C0.000,0.000 0.000,0.000 0.000,62.261 C48.455,87.927 227.239,217.781 370.380,209.418 C543.886,199.297 539.967,119.636 732.975,108.649 C895.861,99.358 895.062,345.632 945.000,414.000 C1039.188,542.961 1243.446,475.024 1406.000,401.000 C1458.954,376.881 1673.736,238.965 1716.000,215.000 C1805.329,164.347 1952.000,205.000 1952.000,205.000 L1952.000,0.000 Z"></path>
       </svg>
+      <div class="content_title__elements">
+        <svg class="elements" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
+          <defs>
+            <filter id="shadow" filterUnits="objectBoundingBox" height="130%" width="140%" x="-15%" y="-15%">
+              <feGaussianBlur in="SourceAlpha" result="blur" stdDeviation="3"></feGaussianBlur>
+              <feOffset dx="5" dy="5" in="blur" result="offsetBlurredAlpha"></feOffset>
+              <feComponentTransfer>
+                <feFuncA type="linear" slope="0.2"></feFuncA>
+              </feComponentTransfer>
+              <feMerge>
+                <feMergeNode></feMergeNode>
+                <feMergeNode in="SourceGraphic"></feMergeNode>
+              </feMerge>
+            </filter>
+            <linearGradient id="gradient" data-name="gradient" x1="839.1" y1="425.41" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse">
+              <stop offset="0" stop-color="#2a16bc"></stop>
+              <stop offset="1" stop-color="#2f20a0"></stop>
+            </linearGradient>
+          </defs>
+          <g fill-rule="nonzero">
+            <path style="fill: url(#gradient); filter: url(#shadow);" d="M10,90c0-44.2,35.8-80,80-80s80,35.8,80,80 M10,90c0,44.2,35.8,80,80,80s80-35.8,80-80 M111.3,90c0,11.7-9.5,21.3-21.3,21.3S68.7,101.7,68.7,90 M111.3,90c0-11.7-9.5-21.3-21.3-21.3S68.7,78.3,68.7,90"></path>
+          </g>
+        </svg>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-xl-6 offset-xl-1 align-items-center">
@@ -103,15 +122,15 @@
             <div class="toggle-tabs">
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Бизнес на любом устройстве </div>
-                <div class="toggle-tabs__item__content">Создаём сайт, который прекрасно выглядит и функционирует на любом размере экрана: мобильный телефон, планшет и компьютер.</div>
+                <div class="toggle-tabs__item__content">Создаём сайт, который прекрасно выглядит и&nbsp;функционирует на&nbsp;любом размере экрана: мобильный телефон, планшет и&nbsp;компьютер.</div>
               </div>
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Digital маркетинг</div>
-                <div class="toggle-tabs__item__content">Позволяет управлять вниманием и поведением пользователей</div>
+                <div class="toggle-tabs__item__content">Позволяет управлять вниманием и&nbsp;поведением пользователей</div>
               </div>
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Концепция</div>
-                <div class="toggle-tabs__item__content">Продуманная и выдержанная направленность, соответствующая тематике сайта</div>
+                <div class="toggle-tabs__item__content">Продуманная и&nbsp;выдержанная направленность, соответствующая тематике сайта</div>
               </div>
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Воронка продаж</div>
@@ -119,7 +138,7 @@
               </div>
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Гармоничный контент</div>
-                <div class="toggle-tabs__item__content">Только качественный и релевантный контент может обеспечить большие продажи и первые места в поисковых системах</div>
+                <div class="toggle-tabs__item__content">Только качественный и&nbsp;релевантный контент может обеспечить большие продажи и&nbsp;первые места в&nbsp;поисковых системах</div>
               </div>
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Работающий дизайн</div>
@@ -131,14 +150,28 @@
       </div>
     </div>
     <div class="content content_portfolio">
+      <div class="content_portfolio__elements">
+        <svg class="elements" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
+          <defs>
+            <linearGradient id="gradient_02" data-name="gradient_02" x1="0" y1="0" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse">
+              <stop offset="0" stop-color="#581cbc"></stop>
+              <stop offset="1" stop-color="#2f20a0"></stop>
+            </linearGradient>
+          </defs>
+          <g style="fill: url(#gradient_02); filter: url(#shadow);" fill-rule="nonzero">
+            <rect x="12" y="9.5" width="71" height="160"></rect>
+            <rect x="97" y="9.5" width="71" height="160"></rect>
+          </g>
+        </svg>
+      </div>
       <div class="container">
         <div class="row">
           <div class="col-xl-5">
-            <h4 class="heading">Реализованные <a href="#">проекты</a></h4>
+            <h4 class="heading">Реализованные <a class="heading__link" href="#">проекты</a></h4>
           </div>
           <div class="col-xl-3 offset-xl-2"><a class="content_portfolio__link" href="#">все проекты здесь >  </a></div>
         </div>
-        <div class="portfolio">
+        <div class="portfolio scroll-pane horizontal-only">
           <div class="row"> 
             <div class="col-md-3"><a class="portfolio__title" href="#">#Логотип</a><a href="#"><img class="portfolio__image" src="./images/01.png"/></a></div>
             <div class="col-md-3"><a class="portfolio__title" href="#">#Веб-разработка</a><a href="#"><img class="portfolio__image" src="./images/02.png"/></a></div>
@@ -148,5 +181,72 @@
         </div>
       </div>
     </div>
+    <div class="content content_contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-6">
+            <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
+            <form class="form form_inline" action="">
+              <input class="input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
+              <button class="btn btn_primary" type="submit">Хочу больше клиентов</button>
+            </form>
+          </div>
+          <div class="col-xl-3">
+            <div class="offer">How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="content blog">
+      <div class="container">
+        <div class="heading">Самое актуальное в нашем <a href="#">блоге</a></div>
+        <div class="row justify-content-between">
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          </div>
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">О&nbsp;чем нужно помнить, создавая уникальные тексты?</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          </div>
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">Продвижение сайта почти бесплатно</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer class="footer">
+      <div class="container">
+        <div class="row justify-content-between align-items-center">
+          <div class="col">
+            <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
+              <g>
+                <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
+                <path class="footer__logo__path" d="M270.1,1.6c-19.6,0-35.4,15.9-35.4,35.4c0,19.6,15.9,35.4,35.4,35.4c19.6,0,35.4-15.9,35.4-35.4v0   C305.5,17.5,289.6,1.6,270.1,1.6z M270.1,46.9c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8l0,0   C279.9,42.5,275.5,46.9,270.1,46.9C270.1,46.9,270.1,46.9,270.1,46.9L270.1,46.9z"></path>
+                <g>
+                  <rect class="footer__logo__path" x="167.6" y="1.6" width="56.7" height="33.5"></rect>
+                  <rect class="footer__logo__path" x="167.6" y="40" width="56.7" height="32.5"></rect>
+                </g>
+                <path class="footer__logo__path" d="M133.2,1.6"></path>
+                <g>
+                  <path class="footer__logo__path" d="M23.9,1.8c1.9-0.6,3.5,0.5,5.1,1.8c7.7,6.3,15.3,12.4,23,18.7c5.3,4.3,10.6,8.6,15.7,13.1c4.5,4,7.5,8.9,7.5,15.2    C75.4,58,71.6,65,65.2,68.9c-4,2.5-8.7,3.7-13.5,3.6c-0.9,0-1.9-0.3-2.6-0.9c-8.9-6.4-17.8-12.9-26.5-19.5    c-6-4.4-11.4-9.5-16-15.4c-4.2-5.2-5.8-12-4.2-18.6c1.2-5.3,4.6-9.9,9.3-12.7C15.2,3.1,19.5,1.8,23.9,1.8z"></path>
+                  <path class="footer__logo__path" d="M40.2,72.4H2.7V42.4L40.2,72.4z"></path>
+                  <path class="footer__logo__path" d="M70.7,1.7v28.5L36,1.7H70.7z"></path>
+                </g>
+              </g>
+            </svg>
+          </div>
+          <div class="col"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col col-xl-6">
+            <ul class="footer__navbar">
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Продвижение</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Портфолио</a></li>
+              <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Блог</a></li>
+              <li class="footer__navbar__item last"><a class="footer__navbar__link" href="#">Дизайн</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
