--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-xl-1">
-            <svg class="header__logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73.64 303.83">
+          <div class="col-3 col-xl-1">
+            <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M98,556.26a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,556.26Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,556.26Z" transform="translate(-98.01 -372.37)"></path>
                 <path class="header__logo__path" d="M98,407.81a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,407.81Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,407.81Z" transform="translate(-98.01 -372.37)"></path>
@@ -32,7 +32,7 @@
               </g>
             </svg>
           </div>
-          <div class="col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-7 col-xl-2"><a class="header__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
         </div>
       </div>
       <svg class="header__nav" id="header__nav" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
@@ -50,7 +50,7 @@
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Портфолио</a></li>
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Блог</a></li>
           <li class="header__navbar__item"><a class="header__navbar__link" href="#">Дизайн</a></li>
-        </ul>
+        </ul><a class="nav__close" id="navbarClose">Закрыть меню</a>
       </div>
     </header>
     <div class="content content_title">
@@ -67,7 +67,7 @@
               <feMergeNode in="SourceGraphic"></feMergeNode>
             </feMerge>
           </filter>
-          <linearGradient id="PSgrad_0" x1="0%" x2="0%" y1="100%" y2="0%">
+          <linearGradient id="PSgrad_0" x1="0%" x2="50%" y1="100%" y2="0%">
             <stop offset="0%" stop-color="#2b238b" stop-opacity="1"></stop>
             <stop offset="100%" stop-color="#2b16bc" stop-opacity="1"></stop>
           </linearGradient>
@@ -88,7 +88,7 @@
                 <feMergeNode in="SourceGraphic"></feMergeNode>
               </feMerge>
             </filter>
-            <linearGradient id="gradient" data-name="gradient" x1="839.1" y1="425.41" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse">
+            <linearGradient id="gradient" data-name="gradient" x1="0%" y1="0%" x2="100%" y2="100%" gradientUnits="userSpaceOnUse">
               <stop offset="0" stop-color="#2a16bc"></stop>
               <stop offset="1" stop-color="#2f20a0"></stop>
             </linearGradient>
@@ -112,7 +112,7 @@
           <div class="col-xl-6">
             <h2 class="heading">От разработки <span class="heading-color">до первых клиентов </span>всего 10 дней</h2>
             <p class="offer">Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. </p>
-            <div class="content__btn"><a class="content__btn__link" href="#">Веб-дизайн</a><a class="content__btn__link" href="#">SEO продвижение</a><a class="content__btn__link" href="#">Контекстная реклама</a><a class="content__btn__link" href="#">Разработка сайта</a><a class="content__btn__link" href="#">Маркетинг продаж</a><a class="content__btn__link" href="#">Создание контента</a></div>
+            <div class="content__btn"><a class="content__btn__link" href="#">Веб-дизайн</a><a class="content__btn__link" href="#">SEO-продвижение</a><a class="content__btn__link" href="#">Контекстная реклама</a><a class="content__btn__link" href="#">Разработка сайта</a><a class="content__btn__link" href="#">Маркетинг продаж</a><a class="content__btn__link" href="#">Создание контента</a></div>
           </div>
           <div class="col-xl-5 offset-xl-3">
             <p class="offer">Сроки для нас — не пустой звук. Мы четко выстраиваем работу, чтобы ваш бизнес начал приносить прибыль как можно скорее. Вы всегда будете в курсе процесса и сможете понимать на каком этапе реализация проекта.</p>
@@ -142,7 +142,7 @@
               </div>
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Работающий дизайн</div>
-                <div class="toggle-tabs__item__content">---------------------------</div>
+                <div class="toggle-tabs__item__content">Создает положительный имидж компании и формирует эффект воздействия на потребителя</div>
               </div>
             </div>
           </div>
@@ -173,10 +173,10 @@
         </div>
         <div class="portfolio scroll-pane horizontal-only">
           <div class="row"> 
-            <div class="col-md-3"><a class="portfolio__title" href="#">#Логотип</a><a href="#"><img class="portfolio__image" src="./images/01.png"/></a></div>
-            <div class="col-md-3"><a class="portfolio__title" href="#">#Веб-разработка</a><a href="#"><img class="portfolio__image" src="./images/02.png"/></a></div>
-            <div class="col-md-3"><a class="portfolio__title" href="#">#Реклама</a><a href="#"><img class="portfolio__image" src="./images/03.png"/></a></div>
-            <div class="col-md-3"><a class="portfolio__title" href="#">#Реклама</a><a href="#"><img class="portfolio__image" src="./images/03.png"/></a></div>
+            <div class="col-10 col-sm-5 col-lg-3 portfolio__item"><a class="portfolio__title" href="#">#Логотип</a><a href="#"><img class="portfolio__image" src="./images/01.png"/></a></div>
+            <div class="col-10 col-sm-5 col-lg-3 portfolio__item"><a class="portfolio__title" href="#">#Веб-разработка</a><a href="#"><img class="portfolio__image" src="./images/02.png"/></a></div>
+            <div class="col-10 col-sm-5 col-lg-3 portfolio__item"><a class="portfolio__title" href="#">#Реклама</a><a href="#"><img class="portfolio__image" src="./images/03.png"/></a></div>
+            <div class="col-10 col-sm-5 col-lg-3 portfolio__item"><a class="portfolio__title" href="#">#Реклама</a><a href="#"><img class="portfolio__image" src="./images/03.png"/></a></div>
           </div>
         </div>
       </div>
@@ -192,12 +192,12 @@
             </form>
           </div>
           <div class="col-xl-3">
-            <div class="offer">How one dull get busy dare far. At principle perfectly by sweetness do. Decisively advantages nor expression unpleasing she led met. Indulgence contrasted sufficient to unpleasant in in insensible favourable. Hard do me sigh with west same lady. So by colonel hearted ferrars. Small for ask shade water manor think men begin. Equally he minutes my hastily. Estate was tended ten boy nearer seemed. Estate was tended ten boy nearer seemed. Up hung mr we give rest half. Their saved linen downs tears son add music. </div>
+            <div class="offer">Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.</div>
           </div>
         </div>
       </div>
     </div>
-    <div class="content blog">
+    <div class="content content_blog">
       <div class="container">
         <div class="heading">Самое актуальное в нашем <a href="#">блоге</a></div>
         <div class="row justify-content-between">
