--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>SOHO студия</title>
     <link href="./css/style.min.css" rel="stylesheet"/>
   </head>
-  <body>
+  <body class="index">
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.nicescroll.min.js"></script>
     <script src="./js/app.min.js"></script>
@@ -17,17 +17,17 @@
           <div class="col-3 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
-                <path class="header__logo__path" d="M98,556.26a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,556.26Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,556.26Z" transform="translate(-98.01 -372.37)"></path>
-                <path class="header__logo__path" d="M98,407.81a35.43,35.43,0,1,0,35.43-35.43A35.43,35.43,0,0,0,98,407.81Zm45.28,0a9.84,9.84,0,1,1-9.84-9.84A9.84,9.84,0,0,1,143.29,407.81Z" transform="translate(-98.01 -372.37)"></path>
+                <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
+                <path class="header__logo__path" d="M73.8,268.3c0-19.6-15.9-35.5-35.4-35.5C18.8,232.8,3,248.7,3,268.3c0,19.5,15.8,35.4,35.4,35.4l0,0C57.9,303.7,73.8,287.8,73.8,268.3z M28.5,268.3c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8s-4.4,9.8-9.8,9.8l0,0C32.9,278.1,28.5,273.7,28.5,268.3L28.5,268.3L28.5,268.3z"></path>
                 <g>
-                  <rect class="header__logo__path" y="81.23" width="33.49" height="56.69"></rect>
-                  <rect class="header__logo__path" x="38.35" y="81.23" width="32.51" height="56.69"></rect>
+                  <rect class="header__logo__path" x="40.3" y="165.8" width="33.5" height="56.7"></rect>
+                  <rect class="header__logo__path" x="3" y="165.8" width="32.5" height="56.7"></rect>
                 </g>
-                <path class="header__logo__path" d="M102.82,544.65" transform="translate(-98.01 -372.37)"></path>
+                <path class="header__logo__path" d="M69,131.4"></path>
                 <g>
-                  <path class="header__logo__path" d="M101,653.92c-0.64-1.9.46-3.5,1.78-5.11,6.25-7.65,12.43-15.35,18.68-23,4.31-5.28,8.58-10.61,13.08-15.72,4-4.52,8.91-7.55,15.22-7.48a21,21,0,0,1,18.37,10.09,23.65,23.65,0,0,1,3.55,13.46,4.84,4.84,0,0,1-.85,2.63c-6.44,8.88-12.85,17.79-19.47,26.54A82.76,82.76,0,0,1,136,671.38a21.49,21.49,0,0,1-18.55,4.23,20.25,20.25,0,0,1-12.74-9.28A22.24,22.24,0,0,1,101,653.92Z" transform="translate(-98.01 -372.37)"></path>
-                  <path class="header__logo__path" d="M171.57,637.64v37.57H141.65Z" transform="translate(-98.01 -372.37)"></path>
-                  <path class="header__logo__path" d="M100.89,607.18h28.53l-28.53,34.69V607.18Z" transform="translate(-98.01 -372.37)"></path>
+                  <path class="header__logo__path" d="M70.8,22.2c0.6,1.9-0.5,3.5-1.8,5.1c-6.3,7.7-12.4,15.3-18.7,23C46,55.6,41.7,60.9,37.2,66c-4,4.5-8.9,7.5-15.2,7.5c-7.5,0.2-14.5-3.7-18.4-10.1c-2.5-4-3.7-8.7-3.6-13.5C0,49,0.3,48,0.9,47.3c6.4-8.9,12.9-17.8,19.5-26.5c4.4-6,9.5-11.4,15.4-16C41,0.6,47.8-1,54.4,0.6c5.3,1.2,9.9,4.6,12.7,9.3C69.5,13.4,70.8,17.7,70.8,22.2z"></path>
+                  <path class="header__logo__path" d="M0.2,38.4l0-37.6h30L0.2,38.4z"></path>
+                  <path class="header__logo__path" d="M70.9,68.9H42.4l28.5-34.7V68.9z"></path>
                 </g>
               </g>
             </svg>
@@ -101,16 +101,17 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-6 offset-xl-1 align-items-center">
-            <h1 class="heading">Разработка. Реклама. Продвижение. Маркетинг продаж.</h1><a class="btn btn_primary" href="#">обсудим проект?</a>
+            <h1 class="heading">Разработка. Реклама. Продвижение. Интернет-маркетинг.</h1><a class="btn btn_primary" href="#">Обсудим проект?</a>
           </div>
         </div>
       </div>
     </div>
-    <div class="content content_section">
-      <div class="container">
+    <div class="content">
+      <div class="container p-relative">
+        <div class="element element_point"></div>
         <div class="row">
           <div class="col-xl-6">
-            <h2 class="heading">От разработки <span class="heading-color">до первых клиентов </span>всего 10 дней</h2>
+            <h2 class="heading heading_smaller">От разработки <span class="text-darkblue">до первых клиентов </span>всего 10 дней</h2>
             <p class="offer">Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. </p>
             <div class="content__btn"><a class="content__btn__link" href="#">Веб-дизайн</a><a class="content__btn__link" href="#">SEO-продвижение</a><a class="content__btn__link" href="#">Контекстная реклама</a><a class="content__btn__link" href="#">Разработка сайта</a><a class="content__btn__link" href="#">Маркетинг продаж</a><a class="content__btn__link" href="#">Создание контента</a></div>
           </div>
@@ -118,7 +119,7 @@
             <p class="offer">Сроки для нас — не пустой звук. Мы четко выстраиваем работу, чтобы ваш бизнес начал приносить прибыль как можно скорее. Вы всегда будете в курсе процесса и сможете понимать на каком этапе реализация проекта.</p>
           </div>
           <div class="col-xl-6 offset-xl-3">
-            <h3 class="heading">У вас будут <span class="heading-color">преимущества</span></h3>
+            <h3 class="heading">У вас будут <span class="text-darkblue">преимущества</span></h3>
             <div class="toggle-tabs">
               <div class="toggle-tabs__item">
                 <div class="toggle-tabs__item__title">Бизнес на любом устройстве </div>
@@ -140,7 +141,7 @@
                 <div class="toggle-tabs__item__title">Гармоничный контент</div>
                 <div class="toggle-tabs__item__content">Только качественный и&nbsp;релевантный контент может обеспечить большие продажи и&nbsp;первые места в&nbsp;поисковых системах</div>
               </div>
-              <div class="toggle-tabs__item">
+              <div class="toggle-tabs__item last">
                 <div class="toggle-tabs__item__title">Работающий дизайн</div>
                 <div class="toggle-tabs__item__content">Создает положительный имидж компании и формирует эффект воздействия на потребителя</div>
               </div>
@@ -149,8 +150,8 @@
         </div>
       </div>
     </div>
-    <div class="content content_portfolio">
-      <div class="content_portfolio__elements">
+    <div class="portfolio">
+      <div class="portfolio__elements">
         <svg class="elements" viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
           <defs>
             <linearGradient id="gradient_02" data-name="gradient_02" x1="0" y1="0" x2="1122.56" y2="425.41" gradientUnits="userSpaceOnUse">
@@ -169,9 +170,9 @@
           <div class="col-xl-5">
             <h4 class="heading">Реализованные <a class="heading__link" href="#">проекты</a></h4>
           </div>
-          <div class="col-xl-3 offset-xl-2"><a class="content_portfolio__link" href="#">все проекты здесь >  </a></div>
+          <div class="col-xl-3 offset-xl-1"><a class="portfolio__link" href="#">все проекты здесь >  </a></div>
         </div>
-        <div class="portfolio scroll-pane horizontal-only">
+        <div class="portfolio__row scroll-pane horizontal-only">
           <div class="row"> 
             <div class="col-10 col-sm-5 col-lg-3 portfolio__item"><a class="portfolio__title" href="#">#Логотип</a><a href="#"><img class="portfolio__image" src="./images/01.png"/></a></div>
             <div class="col-10 col-sm-5 col-lg-3 portfolio__item"><a class="portfolio__title" href="#">#Веб-разработка</a><a href="#"><img class="portfolio__image" src="./images/02.png"/></a></div>
@@ -183,12 +184,12 @@
     </div>
     <div class="content content_contact">
       <div class="container">
-        <div class="row">
+        <div class="row align-items-end">
           <div class="col-xl-6">
             <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
             <form class="form form_inline" action="">
               <input class="input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
-              <button class="btn btn_primary" type="submit">Хочу больше клиентов</button>
+              <button class="btn btn_primary" type="submit">Обсудим проект</button>
             </form>
           </div>
           <div class="col-xl-3">
@@ -197,9 +198,9 @@
         </div>
       </div>
     </div>
-    <div class="content content_blog">
+    <div class="content blog">
       <div class="container">
-        <div class="heading">Самое актуальное в нашем <a href="#">блоге</a></div>
+        <div class="heading">Самое актуальное в нашем <a class="link" href="#">блоге</a></div>
         <div class="row justify-content-between">
           <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</a>
             <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
