--- a/public/dev.html
+++ b/public/dev.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>SOHO студия</title>
+    <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
     <link href="./css/style.min.css" rel="stylesheet"/>
   </head>
   <body class="dev">
@@ -200,7 +201,7 @@
           </div>
         </div>
         <div class="row align-items-center justify-content-center">
-          <div class="col-xl-3 col-lg-5">
+          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_1" src="../images/comment/dev_comment_0.png"/>
             <div class="price">
               <div class="price__header">Лендинг</div>
               <div class="price__content">
@@ -213,7 +214,7 @@
               <div class="price__footer">стоимость 13к+(за 3-4 экрана)</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5">
+          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_2" src="../images/comment/dev_comment_2.png"/>
             <div class="price price_large">
               <div class="price__header">Сайт-визитка</div>
               <div class="price__content">
@@ -227,7 +228,7 @@
               <div class="price__footer">стоимость 45к+</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5">
+          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_3" src="../images/comment/dev_comment_1.png"/>
             <div class="price">
               <div class="price__header">Магазин</div>
               <div class="price__content">
