--- a/public/seo.html
+++ b/public/seo.html
@@ -289,7 +289,7 @@
           </div>
         </div>
         <div class="row align-items-center justify-content-center">
-          <div class="col-xl-3 col-lg-5">
+          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_1" src="../images/comment/seo_comment_0.png"/>
             <div class="price">
               <div class="price__header">упрощенный</div>
               <div class="price__content">
@@ -309,7 +309,7 @@
               <div class="price__footer">стоимость 45к в месяц</div>
             </div>
           </div>
-          <div class="col-xl-3 col-lg-5">
+          <div class="col-xl-3 col-lg-5 p-relative"><img class="element element_3" src="../images/comment/seo_comment_2.png"/>
             <div class="price">
               <div class="price__header">ускоренный</div>
               <div class="price__content">
