--- a/public/blog_inside.html
+++ b/public/blog_inside.html
@@ -8,27 +8,27 @@
     <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
     <link href="./css/style.min.css" rel="stylesheet"/>
   </head>
-  <body>
+  <body class="inside-page">
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.nicescroll.min.js"></script>
     <script src="./js/app.min.js"></script>
     <header class="header">
       <div class="container">
-        <div class="row align-items-end">
-          <div class="col-3 col-lg-2 col-xl-2">
-            <svg class="header__logo header__logo_inside" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
+        <div class="row">
+          <div class="col-3 col-xl-1">
+            <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
-                <path class="header__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
-                <path class="header__logo__path" d="M270.1,1.6c-19.6,0-35.4,15.9-35.4,35.4c0,19.6,15.9,35.4,35.4,35.4c19.6,0,35.4-15.9,35.4-35.4v0   C305.5,17.5,289.6,1.6,270.1,1.6z M270.1,46.9c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8l0,0   C279.9,42.5,275.5,46.9,270.1,46.9C270.1,46.9,270.1,46.9,270.1,46.9L270.1,46.9z"></path>
+                <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
+                <path class="header__logo__path" d="M73.8,268.3c0-19.6-15.9-35.5-35.4-35.5C18.8,232.8,3,248.7,3,268.3c0,19.5,15.8,35.4,35.4,35.4l0,0C57.9,303.7,73.8,287.8,73.8,268.3z M28.5,268.3c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8s-4.4,9.8-9.8,9.8l0,0C32.9,278.1,28.5,273.7,28.5,268.3L28.5,268.3L28.5,268.3z"></path>
                 <g>
-                  <rect class="header__logo__path" x="167.6" y="1.6" width="56.7" height="33.5"></rect>
-                  <rect class="header__logo__path" x="167.6" y="40" width="56.7" height="32.5"></rect>
+                  <rect class="header__logo__path" x="40.3" y="165.8" width="33.5" height="56.7"></rect>
+                  <rect class="header__logo__path" x="3" y="165.8" width="32.5" height="56.7"></rect>
                 </g>
-                <path class="header__logo__path" d="M133.2,1.6"></path>
+                <path class="header__logo__path" d="M69,131.4"></path>
                 <g>
-                  <path class="header__logo__path" d="M23.9,1.8c1.9-0.6,3.5,0.5,5.1,1.8c7.7,6.3,15.3,12.4,23,18.7c5.3,4.3,10.6,8.6,15.7,13.1c4.5,4,7.5,8.9,7.5,15.2    C75.4,58,71.6,65,65.2,68.9c-4,2.5-8.7,3.7-13.5,3.6c-0.9,0-1.9-0.3-2.6-0.9c-8.9-6.4-17.8-12.9-26.5-19.5    c-6-4.4-11.4-9.5-16-15.4c-4.2-5.2-5.8-12-4.2-18.6c1.2-5.3,4.6-9.9,9.3-12.7C15.2,3.1,19.5,1.8,23.9,1.8z"></path>
-                  <path class="header__logo__path" d="M40.2,72.4H2.7V42.4L40.2,72.4z"></path>
-                  <path class="header__logo__path" d="M70.7,1.7v28.5L36,1.7H70.7z"></path>
+                  <path class="header__logo__path" d="M70.8,22.2c0.6,1.9-0.5,3.5-1.8,5.1c-6.3,7.7-12.4,15.3-18.7,23C46,55.6,41.7,60.9,37.2,66c-4,4.5-8.9,7.5-15.2,7.5c-7.5,0.2-14.5-3.7-18.4-10.1c-2.5-4-3.7-8.7-3.6-13.5C0,49,0.3,48,0.9,47.3c6.4-8.9,12.9-17.8,19.5-26.5c4.4-6,9.5-11.4,15.4-16C41,0.6,47.8-1,54.4,0.6c5.3,1.2,9.9,4.6,12.7,9.3C69.5,13.4,70.8,17.7,70.8,22.2z"></path>
+                  <path class="header__logo__path" d="M0.2,38.4l0-37.6h30L0.2,38.4z"></path>
+                  <path class="header__logo__path" d="M70.9,68.9H42.4l28.5-34.7V68.9z"></path>
                 </g>
               </g>
             </svg>
@@ -54,7 +54,7 @@
         </ul><a class="nav__close" id="navbarClose">Закрыть меню</a>
       </div>
     </header>
-    <div class="blog">
+    <div class="blog page">
       <div class="blog__elements elements_01">
         <svg viewBox="0 0 180 180" preserveAspectRatio="xMidYMin meet">
           <defs>
@@ -94,28 +94,44 @@
         </svg>
       </div>
       <div class="container">
-        <div class="row">
-          <div class="col-9">
-            <div class="heading">Самое актуальное в нашем блоге</div>
+        <div class="row justify-content-center">
+          <div class="col-sm-10 col-xl-8">
+            <div class="page__image" style="background-image:url('../images/image_blog.png');"></div>
+            <div class="page__info bg-grey">
+              <div class="page__date">16 апреля 2019</div>
+              <div class="page__person">Автор публикации: <span class="text-color">Елена Павлова</span></div>
+              <div class="page__reading">Время чтения: <span class="text-bold">5 минут</span></div>
+            </div>
+            <div class="page__content">
+              <h1 class="heading">6 способов прокачать первый экран на вашем сайте</h1>
+              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+              <blockquote>Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.</blockquote><img src="../images/image_blog.png" alt="" title=""/>
+              <h2>Заголовок h2</h2>
+              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+              <h3>Заголовок h3</h3>
+              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+              <h4>Заголовок h4</h4>
+              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+              <h5>Заголовок h5</h5>
+              <p>Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?</p>
+            </div>
           </div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-              <div class="blog__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-              <div class="blog__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-              <div class="blog__item__title">Продвижение сайта почти бесплатно</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/belje-na-verevke.jpg')">
-              <div class="blog__item__title">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-01.jpg')">
-              <div class="blog__item__title">О&nbsp;чем нужно помнить, создавая уникальные тексты?</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
-          <div class="col-xl-3"><a class="blog__item blog__item_image" href="#" style="background-image: url('../images/test-02.jpg')">
-              <div class="blog__item__title">Продвижение сайта почти бесплатно</div>
-              <div class="blog__item__offer">12.09.2018</div></a></div>
+        </div>
+      </div>
+    </div>
+    <div class="content blog">
+      <div class="container">
+        <div class="heading">Самое актуальное в нашем <a class="link" href="#">блоге</a></div>
+        <div class="row justify-content-between">
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          </div>
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">О&nbsp;чем нужно помнить, создавая уникальные тексты?</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          </div>
+          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">Продвижение сайта почти бесплатно</a>
+            <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
+          </div>
         </div>
       </div>
     </div>
