--- a/public/seo.html
+++ b/public/seo.html
@@ -10,6 +10,7 @@
   </head>
   <body class="seo">
     <script src="./js/jquery.min.js"></script>
+    <script src="./js/jquery.inputmask.js"></script>
     <script src="./js/app.min.js"></script>
     <header class="header">
       <div class="container">
@@ -337,7 +338,7 @@
           <div class="col-xl-6">
             <h4 class="heading">Хотите, чтобы клиенты находили вас через Яндекс и Google?</h4>
             <form class="form form_inline" action="">
-              <input class="input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
+              <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Конечно хочу</button>
             </form>
           </div>
