--- a/public/blog.html
+++ b/public/blog.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>SOHO студия</title>
+    <link href="./css/jquery.jscrollpane.css" rel="stylesheet"/>
     <link href="./css/style.min.css" rel="stylesheet"/>
   </head>
   <body>
     <script src="./js/jquery.min.js"></script>
-    <script src="./js/jquery.nicescroll.min.js"></script>
+    <script src="./js/jquery.inputmask.js"></script>
     <script src="./js/app.min.js"></script>
     <header class="header">
       <div class="container">
@@ -124,7 +125,7 @@
           <div class="col-xl-6">
             <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
             <form class="form form_inline" action="">
-              <input class="input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
+              <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Хочу больше клиентов</button>
             </form>
           </div>
