--- a/public/dev.html
+++ b/public/dev.html
@@ -10,7 +10,7 @@
   </head>
   <body class="dev">
     <script src="./js/jquery.min.js"></script>
-    <script src="./js/jquery.nicescroll.min.js"></script>
+    <script src="./js/jquery.inputmask.js"></script>
     <script src="./js/app.min.js"></script>
     <header class="header">
       <div class="container">
@@ -295,7 +295,7 @@
           <div class="col-xl-6">
             <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
             <form class="form form_inline" action="">
-              <input class="input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
+              <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Обсудим проект</button>
             </form>
           </div>
