--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,12 @@
   <body class="index">
     <script src="./js/jquery.min.js"></script>
     <script src="./js/jquery.jsscrollpane.min.js"></script>
+    <script src="./js/jquery.inputmask.js"></script>
     <script src="./js/app.min.js"></script>
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-3 col-xl-1">
+          <div class="col-3 col-md-2 col-xl-1">
             <svg class="header__logo" viewBox="0 0 80 320" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="header__logo__path" d="M73.8,119.8c0-19.6-15.9-35.4-35.4-35.4S3,100.3,3,119.8s15.8,35.4,35.4,35.4l0,0C57.9,155.2,73.8,139.4,73.8,119.8zM28.5,119.8c0-5.4,4.4-9.8,9.8-9.8s9.8,4.4,9.8,9.8c0,5.4-4.4,9.8-9.8,9.8C32.9,129.7,28.5,125.3,28.5,119.8L28.5,119.8L28.5,119.8z"></path>
@@ -101,7 +102,7 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-xl-6 offset-xl-1 align-items-center">
+          <div class="col-xl-6 col-md-8 col-9 offset-1 offset-md-2 offset-xl-1 align-items-center">
             <h1 class="heading">Разработка. Реклама. Продвижение. Интернет-маркетинг.</h1><a class="btn btn_primary" href="#">Обсудим проект?     </a>
           </div>
         </div>
@@ -111,15 +112,15 @@
       <div class="container p-relative">
         <div class="element element_point"></div>
         <div class="row">
-          <div class="col-xl-6">
+          <div class="col-lg-8 col-xl-6">
             <h2 class="heading heading_smaller">От разработки <span class="text-darkblue">до первых клиентов </span>всего 10 дней</h2>
             <p class="offer">Занимаемся любимым делом более 5 лет, поэтому не просто делаем и продвигаем сайты. Мы&nbsp;заинтересованы в&nbsp;вашем росте. Поверьте, мы болеем за&nbsp;ваш проект так&nbsp;же, как&nbsp;и&nbsp;вы, поэтому тщательно прорабатываем все детали, чтобы сайт нравился не&nbsp;только вам, но и&nbsp;потребителю. Обращаясь&nbsp;к&nbsp;нам, вы&nbsp;получаете соратников, которые знают короткий путь к&nbsp;сердцам ваших покупателей. </p>
             <div class="content__btn"><a class="content__btn__link" href="#">Веб-дизайн</a><a class="content__btn__link" href="#">SEO-продвижение</a><a class="content__btn__link" href="#">Контекстная реклама</a><a class="content__btn__link" href="#">Разработка сайта</a><a class="content__btn__link" href="#">Маркетинг продаж</a><a class="content__btn__link" href="#">Создание контента</a></div>
           </div>
-          <div class="col-xl-5 offset-xl-4">
+          <div class="col-lg-5 offset-lg-4">
             <p class="offer">Сроки для нас — не пустой звук. Мы четко выстраиваем работу, чтобы ваш бизнес начал приносить прибыль как можно скорее. Вы всегда будете в курсе процесса и сможете понимать на каком этапе реализация проекта.</p>
           </div>
-          <div class="col-xl-6 offset-xl-4">
+          <div class="col-lg-6 offset-lg-4">
             <h3 class="heading heading_medium">У вас будут <span class="text-darkblue">преимущества</span></h3>
             <div class="toggle-tabs">
               <div class="toggle-tabs__item">
@@ -184,17 +185,17 @@
         </div>
       </div>
     </div>
-    <div class="content content_contact">
+    <div class="content content_contact" id="contact">
       <div class="container">
         <div class="row align-items-end">
-          <div class="col-xl-6">
+          <div class="col-xl-6 col-lg-10">
             <h4 class="heading">Нужны клиенты? <br/> Мы знаем как их получить</h4>
             <form class="form form_inline" action="">
-              <input class="input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
+              <input class="in-phone input-text" type="tel" placeholder="Ваш контактный телефон" value=""/>
               <button class="btn btn_primary" type="submit">Обсудим проект</button>
             </form>
           </div>
-          <div class="col-xl-3">
+          <div class="col-xl-3 col-lg-6">
             <div class="offer last">Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.</div>
           </div>
         </div>
@@ -204,13 +205,13 @@
       <div class="container">
         <div class="heading">Самое актуальное в нашем <a class="link" href="#">блоге</a></div>
         <div class="row justify-content-between">
-          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</a>
+          <div class="col-lg-3 blog__item"><a class="blog__item__title" href="#">6&nbsp;способов прокачать первый экран на&nbsp;вашем сайте</a>
             <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
           </div>
-          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">О&nbsp;чем нужно помнить, создавая уникальные тексты?</a>
+          <div class="col-lg-3 blog__item"><a class="blog__item__title" href="#">О&nbsp;чем нужно помнить, создавая уникальные тексты?</a>
             <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
           </div>
-          <div class="col-xl-3 blog__item"><a class="blog__item__title" href="#">Продвижение сайта почти бесплатно</a>
+          <div class="col-lg-3 blog__item"><a class="blog__item__title" href="#">Продвижение сайта почти бесплатно</a>
             <div class="blog__item__offer">Воспользуйтесь нашими советами чтобы создать впечатляющий «первый экран» на вашем веб-сайте. Это не так сложно, как может показаться на первый взгляд.</div>
           </div>
         </div>
@@ -219,7 +220,7 @@
     <footer class="footer">
       <div class="container">
         <div class="row justify-content-between align-items-center">
-          <div class="col">
+          <div class="col-12 col-sm-4 col-lg-2">
             <svg class="footer__logo" viewBox="0 0 320 80" preserveAspectRatio="xMidYMin meet" x="0px" y="0px">
               <g>
                 <path class="footer__logo__path" d="M121.6,1.6C102,1.6,86.2,17.5,86.2,37s15.9,35.4,35.4,35.4S157,56.6,157,37v0C157,17.5,141.2,1.6,121.6,1.6z M121.6,46.9   c-5.4,0-9.8-4.4-9.8-9.8s4.4-9.8,9.8-9.8c5.4,0,9.8,4.4,9.8,9.8C131.4,42.5,127,46.9,121.6,46.9C121.6,46.9,121.6,46.9,121.6,46.9   L121.6,46.9z"></path>
@@ -237,8 +238,8 @@
               </g>
             </svg>
           </div>
-          <div class="col"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
-          <div class="col col-xl-6">
+          <div class="col-12 col-sm-4 col-lg-2"><a class="footer__email" href="mailto:work@websoho.ru">work@websoho.ru</a></div>
+          <div class="col-12 col-xl-6 col-lg-6">
             <ul class="footer__navbar">
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Верстка и разработка</a></li>
               <li class="footer__navbar__item"><a class="footer__navbar__link" href="#">Реклама</a></li>
